<resources>
    <string name="app_name">Simple Views</string>
    <string name="custom_view_demo">Custom view demo</string>
    <string name="custom_viewgroup_demo">Custom ViewGroup Demo</string>
    <string name="test_word_last">World!</string>
    <string name="test_word_first">Hello</string>
    <string name="add_element">Add element</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_demo">Map Demo</string>
    <string name="add_random_markers">Add random markers</string>
    <string name="draw_route">Draw route</string>
</resources>
